--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,66 +1,34 @@
 
 <h1>Contact Information</h1>
 
-<form (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
+<form>
 
   <div>
     <label for="firstName">First Name</label>
-
-    <input type="text" id="firstName" name="firstName" [(ngModel)]="model.firstName" required minlength="3" maxlength="20" appForbiddenName="bob" #firstName="ngModel">
-
-    <div *ngIf="!firstName.valid && (!firstName.pristine || !firstName.untouched)" class="error-text">
-      <p *ngIf="firstName.errors && firstName.errors.required">
-        First name is required
-      </p>
-      <p *ngIf="firstName.errors && firstName.errors.minlength">
-        First name must be at least 3 characters
-      </p>
-      <p *ngIf="firstName.errors && firstName.errors.forbiddenName">
-        First name '{{ firstName.errors.forbiddenName.value }}' is invalid
-      </p>
-    </div>
-    <!--<p>{{ firstName.className }}</p>-->
-    <!--<p>{{ firstName.errors | json }}</p>-->
+    <input type="text" id="firstName">
   </div>
 
   <br />
 
   <div>
     <label for="lastName">Last Name</label>
-
-    <input type="text" id="lastName" name="lastName" [(ngModel)]="model.lastName" required minlength="3" maxlength="20" #lastName="ngModel">
-
-    <div *ngIf="!lastName.valid && (!lastName.pristine || !lastName.untouched)" class="error-text">
-      <p *ngIf="lastName.errors && lastName.errors.required">
-        Last name is required
-      </p>
-      <p *ngIf="lastName.errors && lastName.errors.minlength">
-        Last name must be at least 3 characters
-      </p>
-    </div>
+    <input type="text" id="lastName">
   </div>
 
   <br />
 
   <div>
     <label for="dietaryPreferences">Dietary Preferences</label>
-
-    <select id="dietaryPreferences" name="dietaryPreferences" [(ngModel)]="model.dietaryPreferences" required #dietaryPreferences="ngModel">
+    <select id="dietaryPreferences">
       <option *ngFor="let diet of dietaryPreferenceOptions" [value]="diet">{{diet}}</option>
     </select>
-
-    <div *ngIf="!dietaryPreferences.valid && (!dietaryPreferences.pristine || !dietaryPreferences.untouched)" class="error-text">
-      Dietary preferences is required
-    </div>
-    <!--<pre>{{printOut(dietaryPreferences)}}</pre>-->
-    <!--<pre>{{dietaryPreferences.errors | json}}</pre>-->
   </div>
 
   <br />
 
   <div>
     <label for="isMarried">Married</label>
-    <input type="checkbox" id="isMarried" name="isMarried" [(ngModel)]="model.isMarried">
+    <input type="checkbox" id="isMarried">
   </div>
 
   <br />
@@ -68,7 +36,7 @@
   <div>
     <label>Age</label>
     <div *ngFor="let range of ageRangeOptions; let i=index">
-      <input type="radio" id="{{ 'ageRange-' + i }}" value="{{range}}" name="ageRange" [(ngModel)]="model.ageRange">
+      <input type="radio" id="{{ 'ageRange-' + i }}" value="{{range}}">
       <label for="{{ 'ageRange-' + i }}">{{range}}</label>
     </div>
   </div>
@@ -76,9 +44,8 @@
   <br />
 
   <button (click)="clearModel()">Clear</button>
-  <button type="submit" [disabled]="!contactForm.valid">Submit</button>
+  <button type="submit">Submit</button>
 
 </form>
 
 <pre>{{ model | json }}</pre>
-<pre>{{ contactForm.value | json }}</pre>
